# least-squares-illustration

./: .gitignore  README.md  fitter.py  grid.py  main.py  pyproject.toml  settings.py
src/: fitter.py  grid.py  main.py  settings.py  ui.py
