[project]
name = "least-squares-illustration"
version = "0.1.0"
description = "A pygame based illustration of data fiting (least-squares approximate solutions) using pygame"
authors = [
    {name = "Bora Candan",email = "1boracandan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce (>=2.5.5,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
